--- a/configs/critic_merge.yaml
+++ b/configs/critic_merge.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: checkpoints/Qwen2-VL-7B-Instruct
+model_name_or_path: checkpoints/Qwen2.5-VL-7B-Instruct
 adapter_name_or_path: TODO
 template: qwen2_vl
 finetuning_type: lora
