--- a/configs/train_critic_webshopping.yaml
+++ b/configs/train_critic_webshopping.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: checkpoints/Qwen2-VL-7B-Instruct
+model_name_or_path: checkpoints/Qwen2.5-VL-7B-Instruct
 
 ### method
 stage: sft
