--- a/src_m2w/configs/critic_merge_m2w.yaml
+++ b/src_m2w/configs/critic_merge_m2w.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: /model/huggingface/hub/Qwen2.5-VL-7B-Instruct
+model_name_or_path: /path/Qwen2.5-VL-7B-Instruct
 
 adapter_name_or_path: /your/path/to/adapter
 template: qwen2_vl
